bug fix: any exception goes through GlobalExceptionHandler